--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "@material-ui/core": "3.9.1",
     "@material-ui/icons": "3.0.2",
     "chart.js": "2.7.3",
-    "history": "^4.7.2",
     "informed": "1.10.12",
     "material-ui": "0.20.2",
     "material-ui-search-bar": "0.4.2",
@@ -31,10 +30,5 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
-  ]
+  "browserslist": [">0.2%", "not dead", "not ie <= 11", "not op_mini all"]
 }
