--- a/package.json
+++ b/package.json
@@ -14,12 +14,13 @@
     "react": "16.5.2",
     "react-chartjs-2": "2.7.4",
     "react-dom": "16.5.2",
-    "react-icons": "3.3.0",
+    "react-grid-system": "^4.4.2",
+    "react-icons": "^2.2.7",
     "react-material-icons": "1.0.3",
     "react-router": "4.3.1",
     "react-router-dom": "4.3.1",
     "react-router-native": "4.3.0",
-    "react-scripts": "^2.1.3",
+    "react-scripts": "^2.1.5",
     "react-search-input": "0.11.3",
     "semantic-ui-react": "0.84.0"
   },
@@ -30,5 +31,10 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
-  "browserslist": [">0.2%", "not dead", "not ie <= 11", "not op_mini all"]
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
