--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-router-native": "4.3.0",
     "react-scripts": "^2.1.5",
     "react-search-input": "0.11.3",
-    "semantic-ui-react": "0.84.0"
+    "semantic-ui-react": "0.84.0",
+    "set-default-browser": "^1.0.1"
   },
   "devDependencies": {},
   "scripts": {
